mock ollama and test